[gd_scene load_steps=22 format=3 uid="uid://dvpqvgrnopph7"]

[ext_resource type="Script" path="res://game.gd" id="1_jrrar"]
[ext_resource type="PackedScene" uid="uid://7wxaybs7fnus" path="res://Tree.tscn" id="2_nqmsx"]
[ext_resource type="Script" path="res://TextEdit.gd" id="3_jpeym"]
[ext_resource type="PackedScene" uid="uid://chaort2lcj40w" path="res://Dino.tscn" id="4_n41bv"]
[ext_resource type="Texture2D" uid="uid://dvgfmy6vtvjji" path="res://characters/slime/slime_body.png" id="5_ngiwd"]
[ext_resource type="Script" path="res://Killcount.gd" id="6_j2drh"]
[ext_resource type="Texture2D" uid="uid://c078jrp2yvc4s" path="res://characters/slime/slime_face.png" id="6_ngfd5"]
[ext_resource type="Texture2D" uid="uid://b07d3bp3t0cx6" path="res://free.png" id="8_3wpc5"]
[ext_resource type="Script" path="res://PauseMenu.gd" id="8_s8ghr"]
[ext_resource type="PackedScene" uid="uid://dloean00pd15f" path="res://HoodedFigure.tscn" id="10_mp28i"]
[ext_resource type="Script" path="res://Talk.gd" id="11_bhs4m"]
[ext_resource type="Texture2D" uid="uid://cf4naqrlt07rh" path="res://e-taste.png" id="11_kuh01"]

[sub_resource type="LabelSettings" id="LabelSettings_7i5ui"]
font_size = 50

[sub_resource type="GDScript" id="GDScript_uqcui"]
script/source = "extends Button


func _on_button_down():
	get_tree().paused = false
	get_tree().reload_current_scene()
"

[sub_resource type="Curve2D" id="Curve2D_t63nr"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 64, -168, 0, 0, 0, 0, 1392, -192, 0, 0, 0, 0, 1384, 904, 0, 0, 0, 0, -168, 896, 0, 0, 0, 0, -168, -176, 0, 0, 0, 0, -56, -176, 0, 0, 0, 0, 64, -168)
}
point_count = 7

[sub_resource type="LabelSettings" id="LabelSettings_igr2p"]
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_mfaxq"]
font_size = 64

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ufyc"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="LabelSettings" id="LabelSettings_o5gyq"]
line_spacing = -7.0
font_size = 20
font_color = Color(0, 0, 0, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_2l7fe"]
load_path = "res://.godot/imported/enter-taste.png-04467569ea966a9d61207e615cc48891.ctex"

[sub_resource type="GDScript" id="GDScript_jr83b"]
script/source = "extends Node2D

func _process(delta):
	var screen_size = get_tree().get_root().size
	if %Background.size.x!=screen_size.x and %Background.size.y!=screen_size.y:
	
	#print(screen_size)
		%Background.size=screen_size
		%GameOverScreen.size=screen_size
	#print(%Background.size)#= screen_size
"

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_jrrar")

[node name="StaticBody2D" parent="." instance=ExtResource("2_nqmsx")]
position = Vector2(128, 256)

[node name="StaticBody2D2" parent="." instance=ExtResource("2_nqmsx")]
position = Vector2(1032, 568)

[node name="StaticBody2D3" parent="." instance=ExtResource("2_nqmsx")]
position = Vector2(624, 648)

[node name="StaticBody2D4" parent="." instance=ExtResource("2_nqmsx")]
position = Vector2(312, 568)

[node name="StaticBody2D5" parent="." instance=ExtResource("2_nqmsx")]
position = Vector2(128, 680)

[node name="StaticBody2D6" parent="." instance=ExtResource("2_nqmsx")]
position = Vector2(1320, 256)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = -2.0
offset_right = 38.0
offset_bottom = 40.0

[node name="Background" type="ColorRect" parent="CanvasLayer/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 426.0
offset_bottom = 236.0
scale = Vector2(2.85646, 2.94694)
color = Color(0.282353, 0.701961, 0.368627, 1)

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
process_mode = 3
layer = 2
visible = false

[node name="GameOverScreen" type="ColorRect" parent="GameOver"]
unique_name_in_owner = true
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.0901961, 0.0901961, 0.0901961, 0.603922)

[node name="Label" type="Label" parent="GameOver/GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -117.0
offset_top = -29.5
offset_right = 117.0
offset_bottom = 29.5
grow_horizontal = 2
grow_vertical = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_7i5ui")

[node name="Retry" type="Button" parent="GameOver/GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = 56.0
offset_right = 4.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
text = "Retry"
script = SubResource("GDScript_uqcui")

[node name="Dino" parent="." instance=ExtResource("4_n41bv")]
position = Vector2(576, 328)

[node name="Path2D" type="Path2D" parent="Dino"]
position = Vector2(-576, -328)
curve = SubResource("Curve2D_t63nr")

[node name="PathFollow2D" type="PathFollow2D" parent="Dino/Path2D"]
unique_name_in_owner = true
position = Vector2(64, -168)
rotation = -0.0180703

[node name="KillCounter" type="CanvasLayer" parent="."]

[node name="Time" type="Label" parent="KillCounter"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -4.0
offset_right = 4.0
offset_bottom = 88.0
grow_horizontal = 2
label_settings = SubResource("LabelSettings_igr2p")
script = ExtResource("3_jpeym")

[node name="Control" type="Control" parent="KillCounter"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 80.0
offset_right = -80.0
offset_bottom = 80.0
grow_horizontal = 0

[node name="Slime" type="Sprite2D" parent="KillCounter/Control"]
position = Vector2(-61, -1.5)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_ngiwd")

[node name="Sprite2D2" type="Sprite2D" parent="KillCounter/Control/Slime"]
texture = ExtResource("6_ngfd5")

[node name="Slime_label" type="Label" parent="KillCounter/Control"]
layout_mode = 0
offset_left = -32.0
offset_top = -16.0
offset_right = 8.0
offset_bottom = 7.0
script = ExtResource("6_j2drh")

[node name="Slime2" type="Sprite2D" parent="KillCounter/Control"]
texture_filter = 1
position = Vector2(-56, 56)
scale = Vector2(4, 4)
texture = ExtResource("8_3wpc5")
hframes = 13
vframes = 10
frame = 105

[node name="Chicken_label" type="Label" parent="KillCounter/Control"]
layout_mode = 0
offset_left = -27.0
offset_top = 41.5
offset_right = 13.0
offset_bottom = 64.5
script = ExtResource("6_j2drh")

[node name="PauseMenu" type="CanvasLayer" parent="."]
process_mode = 3
visible = false
script = ExtResource("8_s8ghr")

[node name="Label" type="Label" parent="PauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.5
offset_top = -44.0
offset_right = 112.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
text = "Paused"
label_settings = SubResource("LabelSettings_mfaxq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="PauseMenu"]
offset_right = 40.0
offset_bottom = 23.0
text = "Credits:
https://twitter.com/ScissorMarks for the dino
https://shubibubi.itch.io/ for the chicken
Penzilla: https://penzilla.itch.io/hooded-protagonist for the hooded thingy
Weapon: https://merchant-shade.itch.io/16x16-mixed-rpg-icons

Slime, and Tree from GDQuest:
https://www.gdquest.com/
License - CC-By 4.0 https://creativecommons.org/licenses/by/4.0/"

[node name="Retry" type="Button" parent="PauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = 56.0
offset_right = 4.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
text = "Reset"
script = SubResource("GDScript_uqcui")

[node name="HoodedFigure" parent="." instance=ExtResource("10_mp28i")]
position = Vector2(832, 328)

[node name="Interaction" type="CanvasLayer" parent="."]
visible = false

[node name="Control" type="Control" parent="Interaction"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 200.0
offset_right = -20.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="Interaction/Control"]
texture_filter = 1
position = Vector2(16, 0)
scale = Vector2(0.45, 0.45)
texture = ExtResource("11_kuh01")

[node name="Talk" type="CanvasLayer" parent="."]
process_mode = 3
visible = false
script = ExtResource("11_bhs4m")

[node name="Panel" type="Panel" parent="Talk"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -112.0
offset_right = 320.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(320, 0)
theme_override_styles/panel = SubResource("StyleBoxFlat_6ufyc")

[node name="Label" type="Label" parent="Talk/Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 4.0
offset_right = 568.0
offset_bottom = 74.0
label_settings = SubResource("LabelSettings_o5gyq")
autowrap_mode = 2
clip_text = true
max_lines_visible = 3

[node name="Enter-taste" type="Sprite2D" parent="Talk/Panel"]
texture_filter = 1
position = Vector2(616, 57)
scale = Vector2(0.25, 0.25)
texture = SubResource("CompressedTexture2D_2l7fe")

[node name="ChangeSizeOfScreen" type="Node2D" parent="."]
process_mode = 3
script = SubResource("GDScript_jr83b")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="button_down" from="GameOver/GameOverScreen/Retry" to="GameOver/GameOverScreen/Retry" method="_on_button_down"]
[connection signal="health_depleted" from="Dino" to="." method="_on_health_depleted"]
[connection signal="button_down" from="PauseMenu/Retry" to="PauseMenu/Retry" method="_on_button_down"]
